--- a/src/main/java/views/products/modular/ModularCupView.form
+++ b/src/main/java/views/products/modular/ModularCupView.form
@@ -13,6 +13,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <selected value="true"/>
           <text value="Cerámica"/>
         </properties>
       </component>
@@ -37,6 +38,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <selected value="true"/>
           <text value="Sublimada"/>
         </properties>
       </component>
