--- a/src/main/java/views/products/modular/ModularSweaterView.form
+++ b/src/main/java/views/products/modular/ModularSweaterView.form
@@ -13,6 +13,7 @@
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <selected value="true"/>
           <text value="Cuello Redondo"/>
         </properties>
       </component>
@@ -29,6 +30,7 @@
           <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <selected value="true"/>
           <text value="Adulto"/>
         </properties>
       </component>
@@ -61,6 +63,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <selected value="true"/>
           <text value="Algodón"/>
         </properties>
       </component>
