--- a/src/main/java/views/products/modular/ModularVinylView.form
+++ b/src/main/java/views/products/modular/ModularVinylView.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="views.products.modular.ModularVinylView">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="containerPanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -23,31 +23,36 @@
           <text value="Esmerilado: "/>
         </properties>
       </component>
-      <component id="16b2" class="javax.swing.JRadioButton" binding="radioButton1" default-binding="true">
+      <component id="16b2" class="javax.swing.JRadioButton" binding="impresiónUVRadioButton" default-binding="true">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="RadioButton"/>
+          <selected value="true"/>
+          <text value="Impresión UV"/>
         </properties>
       </component>
-      <component id="7dd9e" class="javax.swing.JRadioButton" binding="radioButton2" default-binding="true">
+      <component id="7dd9e" class="javax.swing.JRadioButton" binding="impresiónEcosolventeRadioButton" default-binding="true">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="RadioButton"/>
+          <text value="Impresión Ecosolvente"/>
         </properties>
       </component>
       <component id="ac7c6" class="javax.swing.JComboBox" binding="baseComboBox">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="78" height="132"/>
+          </grid>
         </constraints>
         <properties/>
       </component>
       <component id="1b94e" class="javax.swing.JLabel" binding="baseLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="34" height="132"/>
+          </grid>
         </constraints>
         <properties>
           <labelFor value="ac7c6"/>
@@ -56,4 +61,10 @@
       </component>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="printingButtonGroup">
+      <member id="7dd9e"/>
+      <member id="16b2"/>
+    </group>
+  </buttonGroups>
 </form>
